[package]
name = "heimdall-disassembler"
description = "Disassembles EVM bytecode to assembly"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
heimdall-config = { workspace = true }
heimdall-common = { workspace = true }
heimdall-cache = { workspace = true }
heimdall-vm = { workspace = true }
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
tracing.workspace = true
