[package]
name = "heimdall-dump"
description = "Dump the value of all storage slots accessed by a contract"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
heimdall-config = { workspace = true }
heimdall-common = { workspace = true }
heimdall-cache = { workspace = true }
thiserror = "1.0.50"
clap = { workspace = true, features = ["derive"] }
derive_builder = "0.12.0"
ethers = "2.0.4"
tracing = "0.1.40"
eyre = "0.6.12"
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
