[package]
name = "heimdall-inspect"
description = "Detailed inspection of Ethereum transactions, including calldata & trace decoding, log visualization, and more."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true
bench = false

[lib]
bench = false

[dependencies]
heimdall-config = { workspace = true }
heimdall-common = { workspace = true }
heimdall-cache = { workspace = true }
heimdall-decoder = { workspace = true }
thiserror = "1.0.50"
clap = { workspace = true, features = ["derive"] }
derive_builder = "0.12.0"
tracing = "0.1.40"
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
async-convert = "1.0.0"
futures = "0.3.28"
async-recursion = "1.0.5"
tokio = { version = "1", features = ["full"] }
alloy = { version = "0.1.3", features = ["full", "rpc-types-debug", "rpc-types-trace"] }
serde_json = "1.0"
hashbrown = "0.14.5"
