[package]
name = "heimdall-inspect"
description = "Detailed inspection of Ethereum transactions, including calldata & trace decoding, log visualization, and more."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
heimdall-config = { workspace = true }
heimdall-common = { workspace = true }
heimdall-cache = { workspace = true }
heimdall-decoder = { workspace = true }
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
derive_builder.workspace = true
tracing.workspace = true
eyre = "0.6.12"
serde = { version = "1.0", features = ["derive"] }
async-convert = "1.0.0"
futures.workspace = true
async-recursion = "1.0.5"
tokio.workspace = true
alloy = { version = "1.0", features = [
  "full",
  "rpc-types-debug",
  "rpc-types-trace",
] }
serde_json = "1.0"
hashbrown.workspace = true
