[package]
name = "heimdall-inspect"
description = "Detailed inspection of Ethereum transactions, including calldata & trace decoding, log visualization, and more."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
heimdall-config = { workspace = true }
heimdall-common = { workspace = true }
heimdall-cache = { workspace = true }
heimdall-decoder = { workspace = true }
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
derive_builder.workspace = true
tracing.workspace = true
eyre.workspace = true
serde.workspace = true
async-convert = "1.0.0"
futures.workspace = true
async-recursion.workspace = true
tokio.workspace = true
alloy.workspace = true
serde_json.workspace = true
hashbrown.workspace = true
