[package]
name = "heimdall-tracing"
description = "Tracing management for Heimdall"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true
bench = false

[lib]
bench = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-appender = "0.2.3"
tracing-journald = "0.3"
tracing-logfmt = "0.3.3"
rolling-file = "0.2.0"
eyre = "0.6.12"
