[package]
name = "heimdall-tracing"
description = "Tracing management for Heimdall"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-journald = { workspace = true }
tracing-logfmt = { workspace = true }
rolling-file = { workspace = true }
eyre.workspace = true
