[package]
name = "heimdall-vm"
description = "Specialized EVM for Heimdall's symbolic execution engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
async-openai.workspace = true
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
crossbeam-channel.workspace = true
fancy-regex.workspace = true
heimdall-cache = { workspace = true }
indicatif.workspace = true
lazy_static.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
strsim.workspace = true
async-recursion.workspace = true
async-trait.workspace = true
chrono.workspace = true
backoff.workspace = true
thiserror.workspace = true
tracing.workspace = true
eyre.workspace = true
heimdall-common.workspace = true
alloy.workspace = true
hashbrown.workspace = true
paste = { workspace = true }

[features]
step-tracing = []
experimental = []

[dev-dependencies]
criterion = { workspace = true }
memory-stats = { workspace = true }

[[bench]]
name = "bench_erc20_transfer"
harness = false

[[bench]]
name = "bench_fib"
harness = false

[[bench]]
name = "bench_ten_thousand_hashes"
harness = false
