[package]
name = "heimdall-rs-disassemble-example"
version = "0.8.7"
edition = "2021"
description = "Heimdall is an advanced Ethereum smart contract toolkit for forensic and heuristic analysis."
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]
license = "MIT"

[dependencies]
heimdall-disassembler = { git = "https://github.com/Jon-Becker/heimdall-rs.git", tag = "0.8.7" }
tokio = { version = "1", features = ["full"] }
