[package]
name = "heimdall-rs-dump-example"
version = "0.8.0"
edition = "2021"
description = "Heimdall is an advanced Ethereum smart contract toolkit for forensic and heuristic analysis."
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]
license = "MIT"

[dependencies]
heimdall-core = { git = "https://github.com/Jon-Becker/heimdall-rs.git", branch = "main" }
tokio = {version = "1", features = ["full"]}
