[package]
name = "heimdall-rs-inspect-example"
version = "0.8.2"
edition = "2021"
description = "Heimdall is an advanced Ethereum smart contract toolkit for forensic and heuristic analysis."
keywords = ["ethereum", "web3", "decompiler", "evm", "crypto"]
license = "MIT"

[dependencies]
heimdall-inspect = { git = "https://github.com/Jon-Becker/heimdall-rs.git", tag = "0.8.2" }
tokio = { version = "1", features = ["full"] }
